apps/web-ui/app/tailwind.css
/* @import 'https://unpkg.com/@stoplight/elements/styles.min.css'; */
@tailwind base;
@tailwind components;
@tailwind utilities;
@layer base {
  html {
    font-family: 'Inter var', 'Helvetica', system-ui, sans-serif;
  }
}

*[data-testid='underlay'] {
  pointer-events: none;
}

*[tabindex='0']:not(:has(*)) {
  outline: none;
}

